--- a/package.json
+++ b/package.json
@@ -21,6 +21,10 @@
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.9.1",
+    "nodemailer": "^6.9.9",
     "sequelize": "^6.35.2"
+  },
+  "devDependencies": {
+    "@types/nodemailer": "^6.4.14"
   }
 }
