--- a/package.json
+++ b/package.json
@@ -14,12 +14,14 @@
     "@types/cookie-parser": "^1.4.6",
     "@types/express": "^4.17.21",
     "@types/jsonwebtoken": "^9.0.5",
+    "@types/method-override": "^0.0.35",
     "@types/node": "^20.11.16",
     "bcrypt-ts": "^5.0.1",
     "cookie-parser": "^1.4.6",
     "dotenv": "^16.4.1",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
+    "method-override": "^3.0.0",
     "mysql2": "^3.9.1",
     "nodemailer": "^6.9.9",
     "sequelize": "^6.35.2"
