--- a/.env
+++ b/.env
@@ -1,10 +1,10 @@
-PORT=3000
+PORT=3000 # Express port
 
 DB_PORT=3307
 DB_HOST=localhost
-DB_USER=root
-DB_PASSWORD=password
-DB_NAME=authservice
+DB_USER={YOUR DB USERNAME}
+DB_PASSWORD={YOUR DB PASSWORD}
+DB_NAME={YOUR DB NAME}
 
-AUTH_SECRET="z+Y<?@w-f^QDLk(Z3s9drp"
+AUTH_SECRET="z+Y<?@w-f^QDLk(Z3s9drp" # -> Put a random string
 AUTH_COOKIE_NAME="authenticated-user"
